--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev":     "vite",
-    "build":   "vite build",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "dependencies": {
     "lucide-react": "^0.379.0",
-    "react":        "^18.3.1",
-    "react-dom":    "^18.3.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
-    "autoprefixer":         "^10.4.19",
-    "postcss":              "^8.4.38",
-    "tailwindcss":          "^3.4.3",
-    "vite":                 "^5.2.11"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.11"
   }
 }
