--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -29,7 +29,7 @@ nixPkgs = [
 ]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["python3 -m pip install -r requirements.txt"]
 
 [start]
-cmd = "cd api && python server.py"
+cmd = "cd api && python3 server.py"
