--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "cd api && python server.py"
+startCommand = "cd api && python3 server.py"
 healthcheckPath = "/api/health"
 restartPolicyType = "on_failure"
